# kuclaw

./: .gitignore  AGENTS.md  CMakeLists.txt  Kuclaw现代化桌面软件架构落地指南.md  Kuclaw首期开发任务拆解-类图-接口定义.md  PRD.md  REDEME.md
.superpowers/brainstorm/37413-1774771435/content/: workspace-shell.html
.superpowers/brainstorm/37413-1774771435/state/: server-stopped
apps/kuclaw-desktop/: CMakeLists.txt  main.cpp
apps/kuclaw-desktop/app/: ApplicationCoordinator.cpp  ApplicationCoordinator.h  ApplicationReopenPolicy.h
assets/icons/: AppIcon.icns  icon.icns
docs/superpowers/plans/: 2026-03-30-macos-native-traffic-lights-implementation.md  2026-03-30-workspace-shell-sidebar-states.md  2026-04-05-app-language-and-popover-language-disclosure.md  2026-04-05-settings-popover-phase-two.md  2026-04-05-settings-popover.md
docs/superpowers/specs/: 2026-03-30-macos-native-traffic-lights-design.md  2026-04-04-macos-menu-bar-icon-design.md  2026-04-05-app-language-and-popover-language-disclosure-design.md  2026-04-05-settings-popover-design.md  2026-04-05-settings-popover-phase-two-design.md
qml/app/: AppShell.qml  AutomationSectionStyles.js  ExpandedSidebarSettingsPopover.qml  SettingsPopover.qml  ShellNavigation.js  SidebarSettingsPopoverController.qml  TitleBarControls.qml  TitleBarDragRegion.qml  TitleBarLayout.js  WorkspaceSelection.js  WorkspaceShellState.js  WorkspaceShellStyles.js  WorkspaceSidebarItems.js
qml/capture/: CaptureOverlay.qml  CaptureOverlayWindow.qml  CaptureToolbar.qml  Magnifier.qml
qml/settings/: RecentColorPanel.qml
scripts/: deploy-windows.bat  run-kuclaw-mac.sh
src/core/annotation/: AnnotationManager.cpp  AnnotationManager.h
src/core/capture/: CaptureCoordinator.cpp  CaptureCoordinator.h  CaptureSessionController.cpp  CaptureSessionController.h  FreezeOverlayWidget.cpp  FreezeOverlayWidget.h  INativeScreenHelper.h  NativeScreenHelperFactory.cpp  NativeScreenHelperFactory.h  ScreenCaptureManager.cpp  ScreenCaptureManager.h
src/core/clipboard/: ClipboardManager.cpp  ClipboardManager.h
src/core/common/: Logger.cpp  Logger.h  SingleInstanceGuard.cpp  SingleInstanceGuard.h
src/core/hotkey/: HotkeyManager.cpp  HotkeyManager.h  IHotkeyRegistrar.h
src/core/i18n/: AppLanguageManager.cpp  AppLanguageManager.h
src/core/pin/: PinWindowManager.cpp  PinWindowManager.h
src/core/settings/: SettingsManager.cpp  SettingsManager.h
src/core/tray/: MacStatusItemBackend.h  MacStatusItemBackend.mm  TrayManager.cpp  TrayManager.h
src/domain/models/: ClipboardPayload.h  DesktopSnapshot.h  PinItem.h
src/integration/platform/: MacHotkeyRegistrar.cpp  MacHotkeyRegistrar.h  MacWindowChrome.h  MacWindowChrome.mm  NativeScreenHelperMac.h  NativeScreenHelperMac.mm  NativeScreenHelperWin.cpp  NativeScreenHelperWin.h  NoopHotkeyRegistrar.cpp  NoopHotkeyRegistrar.h  WinHotkeyRegistrar.cpp  WinHotkeyRegistrar.h
src/ui_bridge/viewmodels/: AppLanguageViewModel.cpp  AppLanguageViewModel.h  CaptureViewModel.cpp  CaptureViewModel.h  ColorHistoryViewModel.cpp  ColorHistoryViewModel.h  PinboardViewModel.cpp  PinboardViewModel.h  SettingsViewModel.cpp  SettingsViewModel.h  WindowChromeViewModel.cpp  WindowChromeViewModel.h
tests/: check_qml_bundle_resources.sh
tests/cpp/: tst_app_language_manager.cpp  tst_application_reopen_policy.cpp  tst_mac_window_chrome_native.mm  tst_tray_manager.cpp  tst_window_chrome_viewmodel.cpp
tests/qml/: tst_automation_section_styles.qml  tst_settings_popover.qml  tst_shell_navigation.qml  tst_title_bar_controls.qml  tst_title_bar_drag_region.qml  tst_title_bar_layout.qml  tst_workspace_selection.qml  tst_workspace_shell_state.qml  tst_workspace_shell_styles.qml  tst_workspace_sidebar_items.qml
translations/: kuclaw_en_US.ts  kuclaw_zh_CN.ts
